--- a/Views/Users/UserIndex.cshtml
+++ b/Views/Users/UserIndex.cshtml
@@ -1,8 +1,8 @@
 ﻿@model IEnumerable<WorkSchedule2.Models.Shift>
 
 @{
-    Layout = "_Layout";
-    ViewData["Title"] = "Index";
+    Layout = "_Layout_User";
+    ViewData["Title"] = "UserIndex";
 }
 
 <h1>Schedule</h1>
@@ -29,8 +29,13 @@
         <div class="dhx_cal_header"></div>
         <div class="dhx_cal_data"></div>
     </div>
-    <script src="~/Scripts/InitSchedule.js" type="text/javascript">
+    <script src="~/Scripts/InitUserSchedule.js" type="text/javascript">
     </script>
+
+
+
+
+
 </body >
 </html >
 
