--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -32,12 +32,22 @@
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Lists</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu">
                         <li>
-                            <a asp-area="" asp-controller="Users" asp-action="AdminUsersList">User List</a>                        </li>
+                            <a asp-area="" asp-controller="Users" asp-action="AdminUsersList">User List</a>
+                        </li>
                         <li>
                             <a asp-area="" asp-controller="Deals" asp-action="Index">Deals List</a>
                         </li>
                         <li>
                             <a asp-area="" asp-controller="Summaries" asp-action="Index">Worker Summary List</a>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Vacations" asp-action="VacationsIndex">Vacations</a>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Vacations" asp-action="VacationsAcceptedList">Vacations List</a>
+                        </li>
+                        <li>
+                            <a asp-area="" asp-controller="Sugestions" asp-action="SugestionsList">Sugestion List</a>
                         </li>
                     </ul>
                 </li>
