--- a/Views/Users/AdminDetailsList.cshtml
+++ b/Views/Users/AdminDetailsList.cshtml
@@ -81,7 +81,7 @@
             <br />
             <form asp-controller="Users">
                 <button asp-action="AdminEditView" asp-route-id="@Model.Id">Edit</button> |
-                <button asp-action="Index">Back to schedule</button>
+                <button asp-action="AdminIndex">Back to schedule</button>
             </form>
             <br />
         </div>
