--- a/Views/Users/UserDetails.cshtml
+++ b/Views/Users/UserDetails.cshtml
@@ -81,8 +81,8 @@
             </div>
             <br />
             <form asp-controller="Users">
-                <button asp-action="UserEdit" asp-route-id="@Model.Id">Edit</button> |
-                <button asp-action="UserIndex">Back to schedule</button>
+                <button asp-action="UserEdit" asp-route-id="@Model.Id" class="btn-default" style="border-radius:5px">Edit</button> |
+                <button asp-action="UserIndex" class="btn-default" style="border-radius:5px">Back to schedule</button>
             </form> 
         </div>
         <br />
