--- a/Views/Deals/Create.cshtml
+++ b/Views/Deals/Create.cshtml
@@ -33,6 +33,10 @@
                 <span asp-validation-for="PayPerMonth" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label class="control-label">Choose User without deal</label>
+                <select asp-for="Role" class="form-control"></select>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
         </form>
