--- a/Views/Deals/Index.cshtml
+++ b/Views/Deals/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Users deals</h2>
 
 <p>
     <a asp-action="Create">Create New</a>
@@ -24,7 +24,12 @@
             <th>
                 @Html.DisplayNameFor(model => model.PayPerMonth)
             </th>
-            <th></th>
+            <th>
+                User First name
+            </th>
+            <th>
+                User Last name
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -41,6 +46,12 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.PayPerMonth)
+            </td>
+            <td>
+                Jacek
+            </td>
+            <td>
+                Kowalski
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
