--- a/Views/Users/UserIndex.cshtml
+++ b/Views/Users/UserIndex.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<WorkSchedule2.Models.Shift>
+﻿@model WorkSchedule2.Models.WebApiEvent
 
 @{
     Layout = "_Layout_User";
@@ -13,7 +13,7 @@
     <title>Getting started with dhtmlxScheduler</title>
     <meta charset="utf-8">
     <script src="~/Scripts/ScheduleDir.js"></script>
-    <link href="https://cdn.dhtmlx.com/scheduler/edge/dhtmlxscheduler_material.css" rel="stylesheet" type="text/css" charset="utf-8">
+    <link href="~/css/schedulerstyle.css" rel="stylesheet" type="text/css" charset="utf-8" />
 </head>
 <body>
     <div id="scheduler_here" class="dhx_cal_container" style='width:100%; height:100vh;'>
@@ -29,13 +29,40 @@
         <div class="dhx_cal_header"></div>
         <div class="dhx_cal_data"></div>
     </div>
-    <script src="~/Scripts/InitUserSchedule.js" type="text/javascript">
+    <script src="~/Scripts/InitSchedule.js" type="text/javascript">
     </script>
-
-
-
-
-
-</body >
+    <div class="container">
+        <div class="row">
+            <div class="col-md-8">
+                <h4>Add Sugestion</h4>
+                <form asp-controller="Shifts" asp-action="Post">
+                    <div class="form-group">
+                        <label>Position</label>
+                        <input asp-for="text" class="form-control" />
+                        <span asp-validation-for="text" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label>Start of the shift</label>
+                        <input asp-for="start_date" type="datetime-local" class="form-control" />
+                        <span asp-validation-for="start_date" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <label>End of the shift</label>
+                        <input asp-for="end_date" type="datetime-local" class="form-control" />
+                        <span asp-validation-for="end_date" class="text-danger"></span>
+                    </div>
+                    <div class="form-group">
+                        <input type="submit" value="Create Sugestion" class="btn btn-primary" />
+                    </div>
+                </form>
+                <form asp-controller="Summaries">
+                    <div class="form-group">
+                        <button asp-controller="Summaries" asp-action="CreateRaportView" class="btn btn-primary">Generate month raport</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</body>
 </html >
 
