--- a/Views/Vacations/VacationsUserIndex.cshtml
+++ b/Views/Vacations/VacationsUserIndex.cshtml
@@ -1,11 +1,9 @@
 ﻿@model WorkSchedule2.Models.WebApiEvent
 
 @{
-    Layout = "_Layout";
     ViewData["Title"] = "Index";
+    Layout = "_Layout_User";
 }
-
-<h1>Schedule</h1>
 
 <!DOCTYPE html>
 <html>
@@ -30,51 +28,44 @@
         <div class="dhx_cal_data">
         </div>
     </div>
-    <script src="~/Scripts/InitSchedule.js" type="text/javascript">
+    <script src="~/Scripts/InitVacationSchedule.js" type="text/javascript">
     </script>
     <br />
     <div class="container">
         <div class="row">
             <div class="col-md-8">
                 <br />
-                <form asp-controller="Shifts" asp-action="Post">
+                <form asp-controller="VacationsApi" asp-action="Post">
                     <div class="form-group">
-                        <label>Position</label>
+                        <label>Reason why you take vacation?</label>
                         <input asp-for="text" class="form-control" style="tab-size: 2;" />
                         <span asp-validation-for="text" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label>Start of the shift</label>
+                        <label>Start of vacation</label>
                         <input asp-for="start_date" type="datetime-local" class="form-control" />
                         <span asp-validation-for="start_date" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label>End of the shift</label>
+                        <label>End of vacation</label>
                         <input asp-for="end_date" type="datetime-local" class="form-control" />
                         <span asp-validation-for="end_date" class="text-danger"></span>
                     </div>
                     <div class="form-group">
-                        <label>User first name</label>
-                        <input asp-for="user_name" class="form-control" />
-                        <span asp-validation-for="user_name" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label>User last name</label>
-                        <input asp-for="user_last_name" class="form-control" />
-                        <span asp-validation-for="user_last_name" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <label>Supervisor name</label>
-                        <input asp-for="supervisor_name" class="form-control" />
-                        <span asp-validation-for="supervisor_name" class="text-danger"></span>
-                    </div>
-                    <div class="form-group">
-                        <input type="submit" value="Create Shift" class="btn btn-primary" />
+                        <input type="submit" value="Create vacation" class="btn btn-primary" />
                     </div>
                 </form>
             </div>
         </div>
     </div>
 </body>
-</html >
+</html>
+
+
+
+
+
+
+
+
 
